# adventofcode-2020

./: .gitignore  README.md
haskell/: aoc2020.cabal  cabal.project
haskell/day01/: Day01.hs
haskell/day02/: Day02.hs
haskell/harness/AOC/: Harness.hs  Solution.hs
haskell/solutions/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs
haskell/src/: Main.hs
haskell/util/: DynMap.hs  Grid2D.hs  PagedVector.hs  ParsingPrelude.hs  RatAngle.hs  Util.hs
